<resources>
    <string name="app_name">Kotlin_JSON</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="base_url">http://192.168.2.27:9090/</string>
    <string name="pokedex_no">#000</string>
    <string name="pokemon_name">PokemonName</string>
    <string name="normal">Normal</string>
    <string name="add_pokemon">Add Pokemon!</string>
    <string name="edit_pokemon">Edit Pokemon!</string>
    <string name="new_pokedex_number">#000</string>
    <string name="new_pokedex_name">Pokemon Name</string>
    <string name="new_pokedex_abilities">Abilites</string>
    <string name="new_pokedex_species">Species</string>
    <string name="just">Just an Arrow</string>
    <string name="click">Tap on pokeball image to choose pokemon image</string>
    <string name="type1">Main Type</string>
    <string name="type2">Secondary Type</string>
    <string name="biodata">BIODATA</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="stat">STATS</string>
    <string name="movename">Move Name</string>
    <string name="power">Power : </string>
    <string name="dmg">100</string>
    <string name="moveeffect">move effect ets bla bla bla bla</string>

   <string name="pokedex">Pokedex</string>
    <string name="move">Moves</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
