<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:cardElevation="3dp"
        app:cardCornerRadius="20dp"
        android:id="@+id/pokedex_card">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/physical"
                android:rotation="90"
                android:id="@+id/ImgMoveCategory"/>
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginStart="10dp">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/Linear_move">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:text="@string/movename"
                        android:gravity="center_vertical"
                        android:textStyle="bold"
                        android:id="@+id/TxtMoveName"
                        android:textSize="15sp"
                />
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/power"
                        android:textSize="15sp"
                        android:layout_marginStart="15dp"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:text="@string/dmg"
                        android:layout_marginStart="10dp"
                        android:id="@+id/TxtMoveDmg"
                        android:textSize="15sp"
                />
                <RelativeLayout android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="end|center"
                                android:layout_marginEnd="10dp">
                    <Button
                            android:id="@+id/MoveType"
                            android:layout_width="70dp"
                            android:layout_height="20dp"
                            android:background="@drawable/icon_normal"
                            android:text="@string/normal"
                            android:textColor="@color/md_white_1000"
                            android:textSize="8sp"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="-2dp"

                    />
                </RelativeLayout>
            </LinearLayout>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Linear_move"
                    android:text="@string/moveeffect"
                    android:id="@+id/TxtMoveEffect"
                    android:textSize="10sp"/>
        </RelativeLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>